# WeatherMap

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_test_and_run.sh  main.cpp
.github/workflows/: ci.yml  cppcheck.yml
include/data/city/: CityLoader.h
include/data/cloud/: CloudCoverageRepository.h
include/data/map/: GeoJsonFileProvider.h
include/data/weather/: FmiXmlParser.h  NetworkClient.h  WeatherCache.h  WeatherRepository.h
include/domain/: CoordinateNormalizer.h
include/domain/city/: CityService.h  ICityLoader.h  ICityService.h  NormalizedCity.h
include/domain/cloud/: CloudCoverageService.h  CloudFieldInterpolator.h  ICloudCoverageRepository.h  ICloudCoverageService.h  NormalizedCloudPoint.h
include/domain/map/: IMapProvider.h  IMapService.h  MapService.h  NormalizedMap.h
include/domain/weather/: IWeatherRepository.h  IWeatherService.h  NormalizedWeatherPoint.h  WeatherService.h
include/shared/: BoundingBox.h  ForecastHorizon.h  Result.h  TemperatureUnit.h
include/view/: Colors.h  MainWindow.h  MapWidget.h
include/viewmodel/city/: CityLabelItem.h  CityLabelsViewModel.h
include/viewmodel/cloud/: CloudOverlayViewModel.h
include/viewmodel/map/: MapLoaderViewModel.h
include/viewmodel/weather/: WeatherDataViewModel.h  WeatherIcon.h  WeatherPointItem.h
resources/: cities.qrc  icons.qrc  map.qrc  queries.fmi.qrc
resources/cities/: cities.json
resources/map/: fin.geojson
resources/queries/: fmi_cloud_request.txt  fmi_request.txt  weather_coords.txt
src/data/: CMakeLists.txt
src/data/city/: CityLoader.cpp
src/data/cloud/: CloudCoverageRepository.cpp
src/data/map/: GeoJsonFileProvider.cpp
src/data/weather/: FmiXmlParser.cpp  NetworkClient.cpp  WeatherCache.cpp  WeatherRepository.cpp
src/domain/: CMakeLists.txt  CoordinateNormalizer.cpp
src/domain/city/: CityService.cpp
src/domain/cloud/: CloudCoverageService.cpp  CloudFieldInterpolator.cpp
src/domain/map/: MapService.cpp
src/domain/weather/: WeatherService.cpp
src/view/: CMakeLists.txt  MainWindow.cpp  MapWidget.cpp
src/viewmodel/: CMakeLists.txt
src/viewmodel/city/: CityLabelsViewModel.cpp
src/viewmodel/cloud/: CloudOverlayViewModel.cpp
src/viewmodel/map/: MapLoaderViewModel.cpp
src/viewmodel/weather/: WeatherDataViewModel.cpp
tests/: CMakeLists.txt
tests/data/: test_city_loader.cpp  test_cloud_coverage_repository.cpp  test_fmi_xml_parser.cpp  test_geojson_provider.cpp  test_weather_cache.cpp
tests/domain/: test_city_service.cpp  test_cloud_field_interpolator.cpp  test_cloud_service.cpp  test_coordinate_normalizer.cpp  test_map_service.cpp  test_weather_service.cpp
tests/view/: test_map_widget.cpp
tests/viewmodel/: test_city_labels.cpp  test_cloud_overlay.cpp  test_map_loader.cpp  test_weather_data.cpp
